--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://M-jawadA.github.io/portfolio",
+  "homepage": "https://CodeSuite1.github.io/portfolio",
   "private": true,
   "dependencies": {
     "@iconify/iconify": "^2.1.0",
